src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__cast_jsonb_to_int32__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Int32,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Int32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
